[workspace]
members = [
    "s_1342_Number_of_Steps_to_Reduce_a_Number_to_Zero",
    "s_1480_Running_Sum_of_1d_Array",
    "s_1672_Richest_Customer_Wealth",
    "s_2236_Root_Equals_Sum_of_Children",
    "s_238_Product_of_Array_Except_Self",
    "s_412_Fizz_Buzz",
    "s_876_Middle_of_The_Linked_List"
]